# White

./: .gitignore  .travis.yml  10graph.json  20graph.json  5  6  8  LICENSE  Makefile  README.md  TASKS.md  appveyor.yml  build-cmake.bat  build.bat  clean.bat  copy-executable.bat  log-command.txt  log-init.txt  log.txt  out.txt  renderer.txt  run.bat  screen.log.txt  shader-log.txt  vertices.txt
Engine/: cmake_install.cmake
Engine/Config/: startup.config
Engine/Models/Digits/: digit_0.polygon  digit_1.polygon  digit_2.polygon  digit_3.polygon  digit_4.polygon  digit_5.polygon  digit_6.polygon  digit_7.polygon  digit_8.polygon  digit_9.polygon
Engine/Models/Formats/: colored_model.mfmt  colored_model_normal.mfmt  textured_model.mfmt  textured_model_normal.mfmt
Engine/Models/Map/: city.polygon  city_plain.polygon  market.polygon  market_plain.polygon  storage.polygon  train.polygon
Engine/Models/Objects/: cube.polygon  line_gray.polygon  wall.polygon  wall_blue.polygon  wall_gray.polygon
Engine/Models/Shapes/: background_1.model  background_1.transform  background_2.model  background_2.transform  background_3.model  background_3.transform  background_4.model  background_4.transform  cube.model  cube.polygon  cube_1.model  cube_1.transform  cube_2.model  cube_2.transform  cube_3.model  cube_3.transform  fire_1.model  fire_1.transform  sky_1.model  sky_1.transform  terrain_1.model  terrain_1.transform
Engine/Shaders/: default.fsh  default.vsh  default_diffuse.fsh  default_diffuse.vsh  default_textured.fsh  default_textured.vsh
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Engine/Animation/: CMakeLists.txt
Source/Engine/Graphics/: CMakeLists.txt
Source/Engine/Graphics/Core/: CMakeLists.txt  ContextState.cpp  ContextState.h  Controller.h  Core.cpp  Core.h  Engine.cpp  Game.cpp  Game.h  IndexProvider.cpp  IndexProvider.h  InterfaceProvider.cpp  InterfaceProvider.h  MeshManager.cpp  MeshManager.h  MotionController.cpp  MotionController.h  MovableObject.h  Object.cpp  Object.h  ObjectIDProvider.cpp  ObjectIDProvider.h  ObjectManager.cpp  ObjectManager.h  ObjectStorage.cpp  ObjectStorage.h  Pipeline.cpp  Pipeline.h  RawDataBlock.cpp  RawDataBlock.h  RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h  StartupSettings.cpp  StartupSettings.h
Source/Engine/Graphics/Core/Interface/: CMakeLists.txt  IHierarchicallyTransformable.cpp  IHierarchicallyTransformable.h  IObject.h  IRotatable.cpp  IRotatable.h  IScalable.cpp  IScalable.h  ITransformable.cpp  ITransformable.h  ITranslatable.cpp  ITranslatable.h
Source/Engine/Graphics/Drawing/: BufferObject.cpp  BufferObject.h  CMakeLists.txt  Camera.h  CharacterBlock.cpp  CharacterBlock.h  DigitMeshCreator.cpp  DigitMeshCreator.h  DrawElements.h  DrawingCommand.cpp  DrawingCommand.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelFormat.cpp  ModelFormat.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexAttribute.h  VertexData.h
Source/Engine/Graphics/GL/: GLFunctions.cpp  GLFunctions.h  GLInitializer.cpp  GLInitializer.h
Source/Engine/Graphics/Interface/: CMakeLists.txt  IDrawable.h
Source/Engine/Graphics/OpenGL/: CMakeLists.txt  GLFunctions.cpp  GLFunctions.h  GLInitializer.cpp  GLInitializer.h
Source/Engine/Graphics/Shader/: CMakeLists.txt  Program.cpp  Program.h  Shader.cpp  Shader.h
Source/Engine/Graphics/Util/: BMPImage.cpp  BMPImage.h  BMPLoader.cpp  BMPLoader.h  CmakeLists.txt  Context.cpp  Context.h  MeshLoader.cpp  MeshLoader.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
Source/Engine/Input/: CMakeLists.txt
Source/Engine/Networking/: CMakeLists.txt
Source/Engine/Render/: CMakeLists.txt
Source/Engine/Render/Core/: CMakeLists.txt  Engine.cpp
Source/Engine/Render/Drawing/: CMakeLists.txt
Source/Engine/Render/Drawing/Object/: CMakeLists.txt  Mesh.h
Source/Engine/Render/GL/: CMakeLists.txt  GLFunctions.cpp  GLFunctions.h  GLInitializer.cpp  GLInitializer.h
Source/Engine/Render/Shader/: CMakeLists.txt  Program.cpp  Program.h  Shader.cpp  Shader.h
Source/Engine/Render/Util/: Canvas.cpp  Canvas.h  CmakeLists.txt
Source/Engine/Threading/: CMakeLists.txt  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h
Source/GraphVisualizer/: CMakeLists.txt  Cell.cpp  GraphView.cpp  GraphView.h  GraphVisualizer.cpp  GraphVisualizer.h  Grid.cpp
Source/GraphVizualizer/: Cell.cpp  Cell.h  GraphView.cpp  GraphView.h  GraphVisualizer.cpp  GraphVisualizer.h  GraphVizualizer.cpp  GraphVizualizer.h  Grid.h
Source/Math/: Matrix.h  Vector.h
Source/Test/: Test.cpp
Source/Util/: CMakeLists.txt
Source/Util/Math/: Algo.cpp  Algo.h  CMakeLists.txt  Circle.cpp  Circle.h  Color.h  Common.h  Connection.cpp  Connection.h  Disk.cpp  Disk.h  Edge.cpp  Edge.h  Ellipse.cpp  Ellipse.h  Graph.cpp  Graph.h  Line.h  Math.h  Matrix.h  Overseer.cpp  Overseer.h  Polygon.cpp  Polygon.h  Post.cpp  Post.h  Rectangle.cpp  Rectangle.h  Ring.cpp  Ring.h  Segment.cpp  Segment.h  Shape.cpp  Shape.h  Train.cpp  Train.h  Vector.h
Source/Util/System/: CMakeLists.txt  Logger.cpp  Logger.h  Window.cpp  Window.h
Util/: cmake_install.cmake
test_graphs/: 10graph.json  20graph.json
