cmake_minimum_required(VERSION 2.6)

add_library(Color Color.cpp)
add_library(Matrix Matrix.cpp)
add_library(Vector Vector.cpp)
add_library(Point Point.cpp)
add_library(Polygon Polygon.cpp)
add_library(Common Common.cpp)
add_library(Disk Disk.cpp)
add_library(Ellipse Ellipse.cpp)
add_library(Graph Graph.cpp)
add_library(Line Line.cpp)
add_library(Rectangle Rectangle.cpp)
add_library(Ring Ring.cpp)
add_library(Segment Segment.cpp)
add_library(Shape Shape.cpp)
