cmake_minimum_required(VERSION 2.6)

set(SRC)
set(SRC ${SRC} Color.cpp) 
set(SRC ${SRC} Matrix.cpp) 
set(SRC ${SRC} Vector.cpp) 
set(SRC ${SRC} Point.cpp) 
set(SRC ${SRC} Common.cpp) 
set(SRC ${SRC} Disk.cpp) 
set(SRC ${SRC} Ellipse.cpp) 
set(SRC ${SRC} Graph.cpp) 
set(SRC ${SRC} Connection.cpp) 
set(SRC ${SRC} Line.cpp) 
set(SRC ${SRC} Rectangle.cpp) 
set(SRC ${SRC} Train.cpp)
set(SRC ${SRC} Ring.cpp) 
set(SRC ${SRC} Segment.cpp) 
set(SRC ${SRC} Shape.cpp)
set(SRC ${SRC} Overseer.cpp)
set(SRC ${SRC} Algo.cpp)
set(SRC ${SRC} Post.cpp)
add_library(Math ${SRC})
add_dependencies(Math json)
