cmake_minimum_required(VERSION 2.6)

set(SRC)
set(SRC ${SRC} Core.cpp) 
set(SRC ${SRC} Game.cpp) 
set(SRC ${SRC} MeshManager.cpp) 
set(SRC ${SRC} Object.cpp) 
set(SRC ${SRC} ObjectIDProvider.cpp) 
set(SRC ${SRC} Pipeline.cpp) 
set(SRC ${SRC} Renderer.cpp)
set(SRC ${SRC} StartupSettings.cpp)
set(SRC ${SRC} InterfaceProvider.cpp)
set(SRC ${SRC} Object.cpp) 
set(SRC ${SRC} ObjectStorage.cpp) 
set(SRC ${SRC} ObjectManager.cpp) 
set(SRC ${SRC} IndexProvider.cpp) 
set(SRC ${SRC} Controller.cpp)
set(SRC ${SRC} MotionController.cpp)
set(SRC ${SRC} RenderTarget.cpp)
set(SRC ${SRC} MovableObject.cpp)
set(SRC ${SRC} ContextState.cpp)
set(SRC ${SRC} RenderData.cpp)
set(LIBS)
set(LIBS ${LIBS} Core)
set(LIBS ${LIBS} CoreInterface)
set(LIBS ${LIBS} OpenGL)
set(LIBS ${LIBS} Shader)
set(LIBS ${LIBS} Util)
set(LIBS ${LIBS} Math)
set(LIBS ${LIBS} GraphVisualizer)
add_executable(Engine WIN32 Engine.cpp)
add_library(Core ${SRC})
target_link_libraries(Engine ${LIBS})
add_dependencies(Core WGForgeTestData OpenGL-Registry EGL-Registry)
add_subdirectory(Interface)
